# hada

./: .gitignore  README.md  pyproject.toml  sources.toml
hada/: cli.py
