[project]
name = "hada"
version = "0.1.0"
description = "HArvest and re-grid DAta from Thredds for specific area"
readme = "README.md"
authors = [
    { name = "Gaute Hope", email = "gauteh@met.no" },
    { name = "Knut-Frode Dagestad", email = "knutfd@met.no" },
]
requires-python = ">=3.9,<4.0"

dependencies = [
    "cartopy >= 0.21.1",
    "click >= 8.1.3",
    "coloredlogs >= 15.0.1",
    "netcdf4 >= 1.6.2",
    "pyproj >= 3.4.1",
    "rioxarray >= 0.13.3",
    "shapely >= 2.0.0",
    "tiledb >= 0.20.0",
    "toml >= 0.10.2",
    "xarray >= 2023.1.0",
    "pykdtree >= 1.3.6",
]

[dependency-groups]
dev = ["pytest >= 7.2.1", "pytest-cov >= 6.0.0"]

# Poetry doesn't support the standard dev-dependencies section above, so we need to
# duplicate the development dependencies here in case someone is using poetry.
[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
pytest-cov = "^6.0.0"

[project.urls]
repository = "http://github.com/gauteh/hada"

[project.scripts]
hada = "hada.cli:hada"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing:skip-covered --cov=hada tests"
